# rust-template

./: .env  .gitignore  Cargo.toml
config/: config.toml
src/: database.rs  error.rs  file_handlers.rs  handlers.rs  main.rs  models.rs  vessel_client.rs
src/websocket/: handler.rs  manager.rs  mod.rs  models.rs
