[package]
name = "ai-server"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["朝阳 <3266420686@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-files = "0.6"
actix-multipart = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = [
    "mysql",
    "runtime-tokio",
    "macros",
    "chrono",
] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.13"
futures-util = "0.3"
bytes = "1.0"
uuid = { version = "1.0", features = ["v4"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
actix-cors = "0.7.1"
dotenvy = "0.15.7"
log4rs = "1.4.0"
nu-ansi-term = "0.50.3"
anyhow = "1.0.100"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
tokio-tungstenite = "0.28.0"
zip = "6.0.0"
